refactor: update subscription endpoint.
